ambassador/envoy.yml
admin:
    access_log_path: /tmp/admin_access.log
    address:
        socket_address:
            address: 0.0.0.0
            port_value: 9091

static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 80
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: fussy_server_host
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              cluster: fussy_server_cluster
                          http_filters:
                              -   name: envoy.filters.http.router
                                  typed_config:
                                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: fussy_server_cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
              cluster_name: fussy_server_cluster
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: fussy-server
                                      port_value: 8000
          circuit_breakers:
              thresholds:
                  - priority: DEFAULT
                    # The maximum number of connections that Envoy will establish to all hosts in an upstream cluster.
                    max_connections: 1  # Set to 1000
                    # The maximum number of requests that will be queued while waiting for a ready connection pool connection.
                    max_pending_requests: 1  # Set to 1000
                    # The maximum number of requests that can be outstanding to all hosts in a cluster
                    max_requests: 1  # Set to 1000
                    # The maximum number of retries that can be outstanding to all hosts in a cluster at any given time.
                    max_retries: 1  # Set to 10
          outlier_detection:
              consecutive_5xx: 1  # Eject the host after 5 consecutive HTTP 5xx responses, set to 100
              interval: 1s  # How often to check for outliers
              base_ejection_time: 180s  # How long to eject the host after it trips
              max_ejection_percent: 100  # Maximum percentage of hosts that can be ejected
